# fin-analysis

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: delivery.yml
scripts/: data_and_analyses.ipynb
source/: index.py
