[tool.poetry]
name = "fin-analysis"
version = "0.1.0"
description = "Finance Analysis"
authors = ["Igor Souza <igormcsouza@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.2.2"
numpy = "^1.20.1"
plotly = "^4.14.3"
pandas-datareader = "^0.9.0"
seaborn = "^0.11.1"

[tool.poetry.dev-dependencies]
pylint = "^2.6.2"
ipykernel = "^5.5.0"
nbformat = "^5.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
